<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/regishead"
        android:layout_width="200dp"
        android:layout_height="67dp"
        android:fontFamily="@font/cbold"
        android:text="@string/regishead"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="111dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:text="@string/namab"
        app:layout_constraintBottom_toTopOf="@+id/emailregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameregister"
        android:layout_width="239dp"
        android:layout_height="38dp"
        android:layout_marginTop="224dp"
        android:hint="Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regishead" />

    <ImageView
        android:id="@+id/btnregister2"
        android:layout_width="207dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"
        app:srcCompat="@drawable/btnregis" />

    <EditText
        android:id="@+id/emailregister"
        android:layout_width="239dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"

        android:hint="@string/emailregister"
        app:layout_constraintBottom_toTopOf="@+id/usernameregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:text="@string/namad"
        app:layout_constraintBottom_toTopOf="@+id/emailregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordregister"
        android:layout_width="238dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/passwordregister"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameregister"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/cpasswordregister"
        android:layout_width="238dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/cpasswordregister"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameregister"
        app:layout_constraintVertical_bias="0.128" />

</androidx.constraintlayout.widget.ConstraintLayout>